--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "hello-world"]
-    path = modules/hello-world
+[submodule "basic"]
+    path = basic
     url = https://github.com/sreyanth26/basic.git
